--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: sans-serif;
+  font-family: Proxima-Nova;
 }
 
 a {
@@ -18,4 +18,14 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+.profile{
+  display:flex;
+  justify-content: center;
+}
+
+.profileRow{
+  display:flex;
+  justify-content:space-evenly
 }
