started styling on artist and tracks

--- a/public/style.css
+++ b/public/style.css
@@ -43,9 +43,10 @@ form div {
 }
 
 .trackList{
-  display:flex;
-  flex-direction: column;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .artistHeader{
@@ -59,4 +60,15 @@ form div {
   justify-content:space evenly
 }
 
+.topArtists{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 200px [col-start]);
+  grid-gap: 20px;
+  margin-top: 50px;
+  margin-left:100px
+}
 
+.app{
+  display:flex;
+  flex-direction:row;
+}
