--- a/public/style.css
+++ b/public/style.css
@@ -43,10 +43,10 @@ form div {
 }
 
 .trackList{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+  display:grid;
+  margin-top: 50px;
+  margin-left:100px
+    /* align-items: center; */
 }
 
 .artistHeader{
