--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,15 @@
 
 body {
   font-family: Proxima-Nova;
+  /* width: 100%;
+    max-width: 1400px;
+    min-height: 100vh;
+    margin: 0px auto;
+    padding: 100px 100px; */
 }
+/* .profileBottomStyling{
+  width:10%
+} */
 
 a {
   text-decoration: none;
@@ -22,6 +30,7 @@ form div {
   display: inline-block;
 }
 
+
 .profile{
   display:flex;
   justify-content: center;
@@ -33,8 +42,8 @@ form div {
 }
 
 .profilePhotos{
-  height:50px;
-  width:50px
+  height:75px;
+  width:75px
 }
 
 .profTrackArtistView{
