--- a/public/style.css
+++ b/public/style.css
@@ -96,8 +96,12 @@
 
 body {
   font-family: 'Circular Std Book';
+  font-weight:normal;
+  font-style:normal;
+  font-size:15px;
   background-color:#171717;
-  color:#ffffff
+  color:#ffffff;
+  padding-top:100px;
   /* width: 100%;
     max-width: 1400px;
     min-height: 100vh;
@@ -130,6 +134,12 @@ form div {
 
 }
 
+.profilePortrait{
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+}
+
 .profileRow{
   display:flex;
   justify-content:space-evenly
@@ -138,6 +148,13 @@ form div {
 .profilePhotos{
   height:75px;
   width:75px;
+}
+
+.profileFont{
+  font-family: 'Circular Std Book';
+  font-weight:normal;
+  font-style:normal;
+  font-size:15px;
 }
 
 .profTrackArtistView{
@@ -152,9 +169,9 @@ form div {
     /* align-items: center; */
 }
 
-.artistHeader{
+.categoryHeader{
   display:flex;
-  justify-content:space-evenly
+  justify-content:space-around;
 }
 
 .timebar{
