--- a/public/style.css
+++ b/public/style.css
@@ -134,6 +134,13 @@ form div {
 
 }
 
+.playlistProfile{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
 .profilePortrait{
   border-radius: 50%;
   height: 200px;
@@ -195,6 +202,12 @@ form div {
   grid-gap: 20px;
   margin-top: 50px;
   margin-left:100px
+}
+
+.chartContainer{
+  width:40%;
+  height:40%;
+  padding-left:100px
 }
 
 .app{
