--- a/public/style.css
+++ b/public/style.css
@@ -138,7 +138,6 @@ form div {
   display:flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .profilePortrait{
@@ -213,4 +212,11 @@ form div {
 .app{
   display:flex;
   flex-direction:row;
+}
+
+.artistCategories{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
