--- a/public/style.css
+++ b/public/style.css
@@ -147,8 +147,9 @@ form div {
 }
 
 .profileRow{
-  display:flex;
-  justify-content:space-evenly
+  display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: 125px 125px 125px
 }
 
 .profilePhotos{
@@ -217,6 +218,5 @@ form div {
 .artistCategories{
     display: flex;
     flex-direction: column;
-    align-items: center;
-
+    text-align: center;
 }
