styled buttons, need to style some other stuff, figure out login

--- a/public/style.css
+++ b/public/style.css
@@ -188,12 +188,14 @@ form div {
 }
 
 .seeMore{
-  color:white;
-  font-size: 15px;
+  color:grey;
+  font-size: 16px;
 
 }
+
 .seeMore:hover{
-  text-decoration: underline  ;
+  color:white ;
+  transition: .3s;
 }
 
 .topArtists{
