--- a/public/style.css
+++ b/public/style.css
@@ -222,3 +222,9 @@ form div {
     flex-direction: column;
     text-align: center;
 }
+
+.login{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
